--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    <script src='//niphaumeenses.net/vignette.min.js' data-zone='8584954' data-sdk='show_8584954'></script>
+    <script src='//niphaumeenses.net/vignette.min.js' data-zone='8584954' data-sdk='show_8584954'>
     <script>
         let watchedAds = 0;
         let earnedPoints = 0;
